Add support for application credential help views and dispatchers

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -79,27 +79,7 @@
                 </li>
             </ul>
             <hr class="mb-5">
-            {% if device.no_onboarding_config %}
-                {% if device.no_onboarding_config.pki_protocols == device.PkiProtocol.MANUAL.value %}
-                    <h2>{% trans "Issue new Application Credentials" %}</h2>
-                    <hr>
-                    <div class="d-flex flex-wrap align-items-start gap-2">
-                        <a href="{% url issue_tls_client_cred_url pk=device.id %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Client Credential" %}</a>
-                        <a href="{% url issue_tls_server_cred_url pk=device.id %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Server Credential" %}</a>
-                    </div>
-                    <br>
-                    <div class="d-flex flex-wrap align-items-start gap-2">
-                        <a href="{% url issue_opc_ua_client_cred_url pk=device.id %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Client Credential" %}</a>
-                        <a href="{% url issue_opc_ua_server_cred_url pk=device.id %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Server Credential" %}</a>
-                        <div class="mb-5"></div>
-                    </div>
-                    <br>
-                {% endif %}
-            {% else %}
+            {% if device.onboarding_config %}
                 <h2 class="d-flex justify-content-between align-items-center">
                     <span>{% trans "Issued Domain Credentials" %}</span>
                     <a href="{% url help_dispatch_domain_url pk=device.pk %}" class="btn btn-primary"
@@ -182,10 +162,29 @@
                                 {% trans "Help - Issue new Application Credentials" %}
                             </a>
                         {% else %}
-                            <a href="{% url help_dispatch_device_type_url pk=device.pk %}" class="btn btn-primary"
-                               style="width: 25rem;">
-                                {% trans "Help - Issue new Application Credentials" %}
-                            </a>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" type="button"
+                                        id="credentialHelpDropdown" data-bs-toggle="dropdown"
+                                        aria-expanded="false" style="width: 25rem;">
+                                    {% trans "Help - Issue new Application Credentials" %}
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="credentialHelpDropdown">
+                                    {% for protocol in device.onboarding_config.get_pki_protocols %}
+                                        {% if protocol.name == 'CMP' %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:cmp-credential-help' pk=device.pk %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% elif protocol.name == 'EST' %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:est-credential-help' pk=device.pk %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+
                         {% endif %}
                     </h2>
                 {% else %}
@@ -201,10 +200,56 @@
                 {% if device.no_onboarding_config.pki_protocols != 16 and device.no_onboarding_config.pki_protocols != 0 %}
                     <h2 class="d-flex justify-content-between align-items-center">
                         <span>{% trans "Issued Application Credentials" %}</span>
-                        <a href="{% url help_dispatch_device_type_url pk=device.pk %}" class="btn btn-primary"
-                           style="width: 25rem;">
-                            {% trans "Help - Issue new Application Credentials" %}
-                        </a>
+                        <div class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button"
+                                    id="credentialHelpDropdown" data-bs-toggle="dropdown"
+                                    aria-expanded="false" style="width: 25rem;">
+                                {% trans "Help - Issue new Application Credentials" %}
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="credentialHelpDropdown">
+                                {% for protocol in device.no_onboarding_config.get_pki_protocols %}
+                                    {% if protocol.name == 'CMP_SHARED_SECRET' %}
+                                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:opc-ua-gds_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% else %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% endif %}
+                                    {% elif protocol.name == 'EST_USERNAME_PASSWORD' %}
+                                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:opc-ua-gds_help_application_credential_selection' pk=device.pk protocol='est' %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% else %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='est' %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% endif %}
+                                    {% elif protocol.name == 'MANUAL' %}
+                                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:opc-ua-gds_help_application_credential_selection' pk=device.pk protocol='manual' %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% else %}
+                                            <li><a class="dropdown-item"
+                                                   href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='manual' %}">
+                                                {{ protocol.label }}
+                                            </a></li>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+
+                        </div>
+
                     </h2>
                 {% else %}
                     <h2>{% trans "Issued Application Credentials" %}</h2>
@@ -212,6 +257,7 @@
             {% else %}
                 <h2>{% trans "Issued Application Credentials" %}</h2>
             {% endif %}
+
 
             <hr>
 
