--- a/trustpoint/templates/help/generic_details/application_credential_selection.html
+++ b/trustpoint/templates/help/generic_details/application_credential_selection.html
@@ -15,17 +15,31 @@
                 <div class="tp-card-centered-content">
                     <p>{% trans 'Please select the type of application credential you wish to issue.' %}</p>
                     <div class="d-flex flex-wrap align-items-start gap-2">
-                        <a href="{% url 'devices:help_dispatch_application_template' pk=device.id certificate_template='tls-client' %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Client Credential" %}</a>
-                        <a href="{% url 'devices:help_dispatch_application_template' pk=device.id certificate_template='tls-server' %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Server Credential" %}</a>
+                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
+                            <a href="{% url 'devices:opc-ua-gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='tls-client' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Client Credential" %}</a>
+                            <a href="{% url 'devices:opc-ua-gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='tls-server' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Server Credential" %}</a>
+                        {% else %}
+                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='tls-client' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Client Credential" %}</a>
+                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='tls-server' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "TLS-Server Credential" %}</a>
+                        {% endif %}
                     </div>
                     <br>
                     <div class="d-flex flex-wrap align-items-start gap-2">
-                        <a href="{% url 'devices:help_dispatch_application_template' pk=device.id certificate_template='opcua-client' %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Client Credential" %}</a>
-                        <a href="{% url 'devices:help_dispatch_application_template' pk=device.id certificate_template='opcua-server' %}"
-                           class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Server Credential" %}</a>
+                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
+                            <a href="{% url 'devices:opc-ua-gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-client' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Client Credential" %}</a>
+                            <a href="{% url 'devices:opc-ua-gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-server' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Server Credential" %}</a>
+                        {% else %}
+                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-client' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Client Credential" %}</a>
+                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-server' %}"
+                               class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Server Credential" %}</a>
+                        {% endif %}
                         <div class="mb-5"></div>
                     </div>
 
