--- a/trustpoint/templates/help/no_onboarding/cmp_shared_secret.html
+++ b/trustpoint/templates/help/no_onboarding/cmp_shared_secret.html
@@ -46,7 +46,7 @@
             <div class="card-footer">
                 <div class="tp-card-btn-footer">
                     <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}" class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
+                    <a href="{% url clm_url pk=device.pk %}" class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
                 </div>
             </div>
         </div>
