Updated urls for OPC UA GDS dispatchers

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -171,15 +171,29 @@
                                 <ul class="dropdown-menu" aria-labelledby="credentialHelpDropdown">
                                     {% for protocol in device.onboarding_config.get_pki_protocols %}
                                         {% if protocol.name == 'CMP' %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:cmp-credential-help' pk=device.pk %}">
-                                                {{ protocol.label }}
-                                            </a></li>
+                                            {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
+                                                <li><a class="dropdown-item"
+                                                       href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
+                                                    {{ protocol.label }}
+                                                </a></li>
+                                            {% else %}
+                                                <li><a class="dropdown-item"
+                                                       href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
+                                                    {{ protocol.label }}
+                                                </a></li>
+                                            {% endif %}
                                         {% elif protocol.name == 'EST' %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:est-credential-help' pk=device.pk %}">
-                                                {{ protocol.label }}
-                                            </a></li>
+                                            {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
+                                                <li><a class="dropdown-item"
+                                                       href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='est' %}">
+                                                    {{ protocol.label }}
+                                                </a></li>
+                                            {% else %}
+                                                <li><a class="dropdown-item"
+                                                       href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='est' %}">
+                                                    {{ protocol.label }}
+                                                </a></li>
+                                            {% endif %}
                                         {% endif %}
                                     {% endfor %}
                                 </ul>
@@ -211,7 +225,7 @@
                                     {% if protocol.name == 'CMP_SHARED_SECRET' %}
                                         {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
                                             <li><a class="dropdown-item"
-                                                   href="{% url 'devices:opc-ua-gds_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
+                                                   href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
                                                 {{ protocol.label }}
                                             </a></li>
                                         {% else %}
@@ -223,7 +237,7 @@
                                     {% elif protocol.name == 'EST_USERNAME_PASSWORD' %}
                                         {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
                                             <li><a class="dropdown-item"
-                                                   href="{% url 'devices:opc-ua-gds_help_application_credential_selection' pk=device.pk protocol='est' %}">
+                                                   href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='est' %}">
                                                 {{ protocol.label }}
                                             </a></li>
                                         {% else %}
@@ -235,7 +249,7 @@
                                     {% elif protocol.name == 'MANUAL' %}
                                         {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
                                             <li><a class="dropdown-item"
-                                                   href="{% url 'devices:opc-ua-gds_help_application_credential_selection' pk=device.pk protocol='manual' %}">
+                                                   href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='manual' %}">
                                                 {{ protocol.label }}
                                             </a></li>
                                         {% else %}
