--- a/trustpoint/templates/trustpoint/help.html
+++ b/trustpoint/templates/trustpoint/help.html
@@ -134,7 +134,7 @@
                         View Software Bill of Materials (SBOM)
                     </h5>
                     <p class="text-muted">See the list of open-source Python packages used in this project.</p>
-                    <a href="{% static 'sbom/sbom.json' %}" 
+                    <a href="{% static 'sbom_cyclonedx.json' %}" 
                        target="_blank" class="btn btn-primary" download>
                         Download SBOM
                     </a>
