--- a/trustpoint/templates/management/tls.html
+++ b/trustpoint/templates/management/tls.html
@@ -3,8 +3,16 @@
 {% load i18n %}
 
 {% block content %}
-
-    <div class="card">
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        {% trans 'Current TLS Certificate' %}
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+           <div class="card">
         <div class="card-header">
             <h1>{% trans "TLS Settings" %}</h1>
         </div>
@@ -154,5 +162,116 @@
             </div>
         </div>
     </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Available TLS Certificates
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="card" style="max-height: 100%; display: flex; flex-direction: column;">
+          <div class="card-header">
+              <h1>{% trans 'TLS Certificates' %}</h1>
+          </div>
+          <div class="card-body text-start" style="overflow-y: auto; flex-grow: 1; max-height: 90%;">
+            <div>
+              <table class="table">
+                <thead>
+                  <tr>
+                      <th id="checkbox-column"><input type="checkbox"/></th>
+                      <th>
+                          <a href="?sort={% if current_sort == 'common_name' %}-{% endif %}common_name">
+                              {% trans 'Common Name' %}
+                          </a>
+                      </th>
+                      <th>
+                          <a href="?sort={% if current_sort == 'not_valid_after' %}-{% endif %}not_valid_after">
+                              {% trans 'Not valid after (UTC)' %}
+                          </a>
+                      </th>
+                      <th>
+                          <a href="?sort={% if current_sort == 'spki_algorithm' %}-{% endif %}spki_algorithm">
+                              {% trans 'Public Key Algorithm' %}
+                          </a>
+                      </th>
+                      <th>
+                          <a href="?sort={% if current_sort == 'spki_key_size' %}-{% endif %}spki_key_size">
+                              {% trans 'Public Key Size' %}
+                          </a>
+                      </th>
+                      <th>
+                          <a href="?sort={% if current_sort == 'spki_ec_curve' %}-{% endif %}spki_ec_curve">
+                              {% trans 'Public Key Curve (ECC)' %}
+                          </a>
+                      </th>
+                      <th>
+                          <a
+                              href="?sort={% if current_sort == 'certificate_status' %}-{% endif %}certificate_status">
+                              {% trans 'Status' %}
+                          </a>
+                      </th>
+                      <th>
+                          <a href="?sort={% if current_sort == 'created_at' %}-{% endif %}created_at">
+                              {% trans 'Created at' %}
+                          </a>
+                      </th>
+                      <th>
+                          <a href="?sort={% if current_sort == 'is_self_signed' %}-{% endif %}is_self_signed">
+                              {% trans 'Self-Signed' %}
+                          </a>
+                      </th>
+                      <th>{% trans 'Details' %}</th>
+                      <th>{% trans 'Download' %}</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for certificate in tls_certificates %}
+                  <tr>
+                      <td class="row_checkbox">
+                          <input type="checkbox" name="row_checkbox" value="{{ certificate.id }}" />
+                      </td>
+                      <td>{{ certificate.common_name }}</td>
+                      <td>{{ certificate.not_valid_after }}</td>
+                      <td>{{ certificate.spki_algorithm }}</td>
+                      <td>{{ certificate.spki_key_size }}</td>
+                      <td>{% if certificate.spki_ec_curve%} {{ certificate.spki_ec_curve }} {% else %}—{% endif %}</td>
+                      <td>{{ certificate.certificate_status }}</td>
+                      <td>{{ certificate.created_at }}</td>
+                      <td>{% if certificate.is_self_signed == 1 %} ✔ {% else %} ✘ {% endif %}</td>
+                      <td><a href="{% url 'pki:certificate-detail' pk=certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Details' %}</a></td>
+                      <td><a href="{% url 'pki:certificate-download' pk=certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Download' %}</a></td>
+                  </tr>
+                  {% empty %}
+                  <tr>
+                      <td colspan="11" class="middle">{% trans 'No certificates are available. Add an Issuing CA first.' %}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+
+              {% include 'trustpoint/pagination.html' %}
+            </div>
+          </div>
+          <div class="card-footer d-flex justify-content-between tp-sticky-footer">
+              <div class="tp-card-btn-footer m-1">
+                <button type="button" class="btn btn-primary tp-table-select-btn" data-tp-url="download/tar.gz">
+                    {% trans "Download selected (tar.gz)" %}
+                </button>
+                <button type="button" class="btn btn-primary tp-table-select-btn" data-tp-url="download/zip">
+                    {% trans "Download selected (zip)" %}
+                </button>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 {% endblock %}
