--- a/trustpoint/templates/management/tls.html
+++ b/trustpoint/templates/management/tls.html
@@ -226,24 +226,26 @@
                       </th>
                       <th>{% trans 'Details' %}</th>
                       <th>{% trans 'Download' %}</th>
+                      <th>{% trans 'In Use' %}</th>
                   </tr>
                 </thead>
                 <tbody>
-                  {% for certificate in tls_certificates %}
+                  {% for tls_certificate in tls_certificates %}
                   <tr>
                       <td class="row_checkbox">
-                          <input type="checkbox" name="row_checkbox" value="{{ certificate.id }}" />
+                          <input type="checkbox" name="row_checkbox" value="{{ tls_certificate.id }}" />
                       </td>
-                      <td>{{ certificate.common_name }}</td>
-                      <td>{{ certificate.not_valid_after }}</td>
-                      <td>{{ certificate.spki_algorithm }}</td>
-                      <td>{{ certificate.spki_key_size }}</td>
-                      <td>{% if certificate.spki_ec_curve%} {{ certificate.spki_ec_curve }} {% else %}—{% endif %}</td>
-                      <td>{{ certificate.certificate_status }}</td>
-                      <td>{{ certificate.created_at }}</td>
-                      <td>{% if certificate.is_self_signed == 1 %} ✔ {% else %} ✘ {% endif %}</td>
-                      <td><a href="{% url 'pki:certificate-detail' pk=certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Details' %}</a></td>
-                      <td><a href="{% url 'pki:certificate-download' pk=certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Download' %}</a></td>
+                      <td>{{ tls_certificate.common_name }}</td>
+                      <td>{{ tls_certificate.not_valid_after }}</td>
+                      <td>{{ tls_certificate.spki_algorithm }}</td>
+                      <td>{{ tls_certificate.spki_key_size }}</td>
+                      <td>{% if tls_certificate.spki_ec_curve%} {{ tls_certificate.spki_ec_curve }} {% else %}—{% endif %}</td>
+                      <td>{{ tls_certificate.certificate_status }}</td>
+                      <td>{{ tls_certificate.created_at }}</td>
+                      <td>{% if tls_certificate.is_self_signed == 1 %} ✔ {% else %} ✘ {% endif %}</td>
+                      <td><a href="{% url 'pki:certificate-detail' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Details' %}</a></td>
+                      <td><a href="{% url 'pki:certificate-download' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Download' %}</a></td>
+                       <td><a href="{% url 'pki:certificate-detail' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% if tls_certificate.sha256_fingerprint == certificate.sha256_fingerprint %} {% trans 'Deactivate' %} {% else %} {% trans 'Activate' %} {% endif %}</a></td>
                   </tr>
                   {% empty %}
                   <tr>
@@ -266,6 +268,33 @@
                 </button>
               </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        {% trans "Generate Certificate" %}
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="card-body pt-3 pb-4">
+            <h2>{% trans 'Generate Self-Signed TLS-Server Credential' %}</h2>
+            <hr>
+            <h3 class="mb-3">Subject Alternative Name (SAN) Information.</h3>
+            <form method="POST" action="{% url 'setup_wizard:generate_tls_server_credential' %}"  class="text-start">
+                {% csrf_token %}
+                <fieldset class="form-group tp-form-group">
+                    {{ tls_form|crispy }}
+                </fieldset>
+                <hr>
+                <div class="tp-form-btn-group tp-form-btn-group">
+                    <a href="{% url 'setup_wizard:initial' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
+                    <button class="btn btn-primary w-100 mt-1" type="submit">{% trans "Generate Self-Signed TLS-Server Credential" %}</button>
+                </div>
+            </form>
         </div>
       </div>
     </div>
