--- a/trustpoint/templates/management/tls.html
+++ b/trustpoint/templates/management/tls.html
@@ -245,7 +245,16 @@
                       <td>{% if tls_certificate.is_self_signed == 1 %} ✔ {% else %} ✘ {% endif %}</td>
                       <td><a href="{% url 'pki:certificate-detail' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Details' %}</a></td>
                       <td><a href="{% url 'pki:certificate-download' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% trans 'Download' %}</a></td>
-                       <td><a href="{% url 'pki:certificate-detail' pk=tls_certificate.id %}" class="btn btn-primary tp-table-btn w-100">{% if tls_certificate.sha256_fingerprint == certificate.sha256_fingerprint %} {% trans 'Deactivate' %} {% else %} {% trans 'Activate' %} {% endif %}</a></td>
+                       <td>
+                        {% if tls_certificate.sha256_fingerprint != certificate.sha256_fingerprint %}
+                        <form method="POST" action="{% url 'management:activate-tls' pk=tls_certificate.id %}">
+                          {% csrf_token %}
+                          <button type="submit" class="btn btn-primary tp-table-btn w-100">{% trans 'Activate' %}</button>
+                        </form>
+                        {% else %}
+                         ✔
+                        {% endif %}
+                      </td>
                   </tr>
                   {% empty %}
                   <tr>
@@ -258,7 +267,7 @@
               {% include 'trustpoint/pagination.html' %}
             </div>
           </div>
-          <div class="card-footer d-flex justify-content-between tp-sticky-footer">
+          <div class="card-footer d-flex justify-content-between">
               <div class="tp-card-btn-footer m-1">
                 <button type="button" class="btn btn-primary tp-table-select-btn" data-tp-url="download/tar.gz">
                     {% trans "Download selected (tar.gz)" %}
@@ -291,8 +300,8 @@
                 </fieldset>
                 <hr>
                 <div class="tp-form-btn-group tp-form-btn-group">
-                    <a href="{% url 'setup_wizard:initial' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
-                    <button class="btn btn-primary w-100 mt-1" type="submit">{% trans "Generate Self-Signed TLS-Server Credential" %}</button>
+                    <a href="" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
+                    <button class="btn btn-primary w-100 mt-1" type="submit">{% trans "Generate Self-Signed TLS-Server Credential and Activate" %}</button>
                 </div>
             </form>
         </div>
