wip no onboarding

--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="card-body">
-            <h2>{% trans "Device" %} <a href="{% url details_url pk=device.id %}">{% trans "Details" %}</a></h2>
+            <h2>{% trans "Device Configuration" %}</h2>
             <hr class="hr-m">
             <ul class="tp-kvp-list">
                 <li>
@@ -210,14 +210,13 @@
                 {% endif %}
 
             {% elif device.no_onboarding_config %}
-                {% comment %}Check if any protocol other than MANUAL (16) is enabled{% endcomment %}
-                {% if device.no_onboarding_config.pki_protocols != 16 and device.no_onboarding_config.pki_protocols != 0 %}
+                
                     <h2 class="d-flex justify-content-between align-items-center">
                         <span>{% trans "Issued Application Credentials" %}</span>
                         <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle" type="button"
+                            <button class="btn btn-primary dropdown-toggle min-width-25" style="width: 25rem;" type="button"
                                     id="credentialHelpDropdown" data-bs-toggle="dropdown"
-                                    aria-expanded="false" style="width: 25rem;">
+                                    aria-expanded="false">
                                 {% trans "Help - Issue new Application Credentials" %}
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="credentialHelpDropdown">
@@ -265,9 +264,7 @@
                         </div>
 
                     </h2>
-                {% else %}
-                    <h2>{% trans "Issued Application Credentials" %}</h2>
-                {% endif %}
+
             {% else %}
                 <h2>{% trans "Issued Application Credentials" %}</h2>
             {% endif %}
@@ -276,7 +273,7 @@
             <hr>
 
             <div>
-                <table class="table">
+                <table class="table mb-0">
                     <thead>
                     <tr>
                         <th>
@@ -331,7 +328,12 @@
                     {% endfor %}
                     </tbody>
                 </table>
-                {% include 'trustpoint/pagination.html' with page_param='-a' page_obj=application_credentials is_paginated=is_paginated_a %}
+                <div class="d-flex justify-content-between align-items-center">
+                    {% include 'trustpoint/pagination.html' with page_param='-a' page_obj=application_credentials is_paginated=is_paginated_a %}
+                    <a class="btn btn-primary min-width-25" href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='manual' %}">
+                        Issue Application Credential Manually
+                    </a>
+                </div>
             </div>
         </div>
         <div class="card-footer d-flex justify-content-between align-items-center">
