--- a/trustpoint/templates/trustpoint/pagination.html
+++ b/trustpoint/templates/trustpoint/pagination.html
@@ -1,6 +1,6 @@
 <!-- Pagination Controls -->
 {% if is_paginated %}
-<nav>
+<nav class="mt-3">
   <ul class="pagination">
     {% if page_obj.has_previous %}
     <li class="page-item">
