--- a/trustpoint/templates/workflows/definition_wizard.html
+++ b/trustpoint/templates/workflows/definition_wizard.html
@@ -1,7 +1,12 @@
-{% extends 'trustpoint/base.html' %}
+{% extends "trustpoint/base.html" %}
 {% load static %}
 {% block content %}
-  <h1>Create New Workflow</h1>
   <div id="workflow-wizard"></div>
+
+  {# Inject the STEP_PARAM_DEFS JSON for the wizard #}
+  <script id="stepParamDefs" type="application/json">
+    {{ step_param_defs_json|safe }}
+  </script>
+
   <script src="{% static 'js/workflow_wizard.js' %}"></script>
 {% endblock %}
