no-onbording cases done

--- a/trustpoint/static/css/trustpoint.css
+++ b/trustpoint/static/css/trustpoint.css
@@ -963,5 +963,10 @@ code {
     border-collapse: collapse;
 }
 
+input[readonly].readonly-field {
+    background-color: #717272;
+    opacity: 1;
+    pointer-events: none;
+}
 
 /* ----- Testing ----- */
