--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -12,79 +12,17 @@
         <div class="card-body">
             <h2>{% trans "Device Configuration" %}</h2>
             <hr class="hr-m">
-            <ul class="tp-kvp-list">
-                <li>
-                    <div>{% trans 'Device Name' %}</div>
-                    <div>{{ device.common_name }}</div>
-                </li>
-                <li>
-                    <div>{% trans 'Device Serial Number' %}</div>
-                    <div>{{ device.serial_number }}</div>
-                </li>
-                <li>
-                    <div>{% trans 'Domain Credential Onboarding' %}</div>
-                    <div>
-                        {% if device.onboarding_config %}
-                            {% trans 'True' %}
-                        {% else %}
-                            {% trans 'False' %}
-                        {% endif %}
-                    </div>
-                </li>
-                {% if device.onboarding_config %}
-                    <li>
-                        <div>{% trans 'Onboarding Protocol' %}</div>
-                        <div>{{ device.onboarding_config.get_onboarding_protocol_display }}</div>
-                    </li>
-                    <li>
-                        <div>{% trans 'Onboarding Status' %}</div>
-                        <div>{{ device.onboarding_config.get_onboarding_status_display }}</div>
-                    </li>
-                {% endif %}
-
-
-                <li>
-                    <div>{% trans 'Allowed PKI Protocols' %}</div>
-                    <div>
-                        {% if device.onboarding_config %}
-                            {% for protocol in device.onboarding_config.get_pki_protocols %}
-                                {{ protocol.label }}{% if not forloop.last %}, {% endif %}
-                            {% endfor %}
-                        {% elif device.no_onboarding_config %}
-                            {% for protocol in device.no_onboarding_config.get_pki_protocols %}
-                                {{ protocol.label }}{% if not forloop.last %}, {% endif %}
-                            {% endfor %}
-                        {% else %}
-                            {% trans "No PKI Protocols Configured" %}
-                        {% endif %}
-                    </div>
-                </li>
-
-
-                <li>
-                    <div>{% trans 'Domain' %}</div>
-                    <div>
-                        {% if device.domain %}
-                            <a href="{% url 'pki:domains-detail' pk=device.domain.id %}">
-                                {{ device.domain.unique_name }}
-                            </a>
-                        {% else %}
-                            {% trans 'This device is not part of any domain.' %}
-                        {% endif %}
-                    </div>
-                </li>
-                <li>
-                    <div>{% trans 'Signature Suite' %}</div>
-                    <div>{{ device.public_key_info }}</div>
-                </li>
-            </ul>
-            <hr class="mb-5">
+            <form method="post" style="margin-bottom: 5rem;">
+                {% csrf_token %}
+                {% crispy device_form %}
+            </form>
+            
             {% if device.onboarding_config %}
                 <h2 class="d-flex justify-content-between align-items-center">
                     <span>{% trans "Issued Domain Credentials" %}</span>
-                    <a href="{% url help_dispatch_domain_url pk=device.pk %}" class="btn btn-primary"
+                    <a href="" class="btn btn-primary"
                        style="width: 25rem;">
-                        {% trans "Help - Issue new Domain Credentials" %}
+                        {% trans "Issue new Domain Credential" %}
                     </a>
                 </h2>
                 <hr>
@@ -92,7 +30,6 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <!-- <th id="checkbox-column"><input type="checkbox"/></th> -->
                             <th>
                                 <a href="#" onclick="updateQueryParam(event, 'sort', 'domain')">
                                     {% trans 'Domain' %}
@@ -125,9 +62,6 @@
                         <tbody>
                         {% for cred in domain_credentials %}
                             <tr>
-                                <!-- <td class="row_checkbox"> -->
-                                <!--   <input type="checkbox" name="row_checkbox" value="{{ notification.id }}" /> -->
-                                <!-- </td> -->
                                 <td>{{ cred.domain }}</td>
                                 <td>{{ cred.common_name }}</td>
                                 <td>{{ cred.created_at }}</td>
@@ -156,50 +90,17 @@
                         <span>{% trans "Issued Application Credentials" %}</span>
 
                         {% if device.onboarding_config.onboarding_status == 1 %}
-                            <a href="{% url help_dispatch_device_type_url pk=device.pk %}"
+                            <a href=""
                                class="btn btn-secondary pe-none"
                                style="width: 25rem;" aria-disabled="true">
-                                {% trans "Help - Issue new Application Credentials" %}
+                                {% trans "Issue new Application Credential" %}
                             </a>
                         {% else %}
-                            <div class="dropdown">
-                                <button class="btn btn-primary dropdown-toggle" type="button"
-                                        id="credentialHelpDropdown" data-bs-toggle="dropdown"
-                                        aria-expanded="false" style="width: 25rem;">
-                                    {% trans "Help - Issue new Application Credentials" %}
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="credentialHelpDropdown">
-                                    {% for protocol in device.onboarding_config.get_pki_protocols %}
-                                        {% if protocol.name == 'CMP' %}
-                                            {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
-                                                <li><a class="dropdown-item"
-                                                       href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
-                                                    {{ protocol.label }}
-                                                </a></li>
-                                            {% else %}
-                                                <li><a class="dropdown-item"
-                                                       href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
-                                                    {{ protocol.label }}
-                                                </a></li>
-                                            {% endif %}
-                                        {% elif protocol.name == 'EST' %}
-                                            {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
-                                                <li><a class="dropdown-item"
-                                                       href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='est' %}">
-                                                    {{ protocol.label }}
-                                                </a></li>
-                                            {% else %}
-                                                <li><a class="dropdown-item"
-                                                       href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='est' %}">
-                                                    {{ protocol.label }}
-                                                </a></li>
-                                            {% endif %}
-                                        {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-
+                            <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
+                                {% trans 'Issue New Application Credential' %}
+                            </a>
                         {% endif %}
+                        
                     </h2>
                 {% else %}
                     <h2>{% trans "Issued Application Credentials" %}</h2>
@@ -213,56 +114,9 @@
                 
                     <h2 class="d-flex justify-content-between align-items-center">
                         <span>{% trans "Issued Application Credentials" %}</span>
-                        <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle min-width-25" style="width: 25rem;" type="button"
-                                    id="credentialHelpDropdown" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                {% trans "Help - Issue new Application Credentials" %}
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="credentialHelpDropdown">
-                                {% for protocol in device.no_onboarding_config.get_pki_protocols %}
-                                    {% if protocol.name == 'CMP_SHARED_SECRET' %}
-                                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
-                                                {{ protocol.label }}
-                                            </a></li>
-                                        {% else %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='cmp' %}">
-                                                {{ protocol.label }}
-                                            </a></li>
-                                        {% endif %}
-                                    {% elif protocol.name == 'EST_USERNAME_PASSWORD' %}
-                                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='est' %}">
-                                                {{ protocol.label }}
-                                            </a></li>
-                                        {% else %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='est' %}">
-                                                {{ protocol.label }}
-                                            </a></li>
-                                        {% endif %}
-                                    {% elif protocol.name == 'MANUAL' %}
-                                        {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:opc_ua_gds_help_application_credential_selection' pk=device.pk protocol='manual' %}">
-                                                {{ protocol.label }}
-                                            </a></li>
-                                        {% else %}
-                                            <li><a class="dropdown-item"
-                                                   href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='manual' %}">
-                                                {{ protocol.label }}
-                                            </a></li>
-                                        {% endif %}
-                                    {% endif %}
-                                {% endfor %}
-                            </ul>
-
-                        </div>
-
+                            <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
+                                {% trans 'Issue New Application Credential' %}
+                            </a>
                     </h2>
 
             {% else %}
@@ -328,15 +182,9 @@
                     {% endfor %}
                     </tbody>
                 </table>
-                <div class="d-flex justify-content-between align-items-center">
-                    {% include 'trustpoint/pagination.html' with page_param='-a' page_obj=application_credentials is_paginated=is_paginated_a %}
-                    <a class="btn btn-primary min-width-25" href="{% url 'devices:devices_help_application_credential_selection' pk=device.pk protocol='manual' %}">
-                        Issue Application Credential Manually
-                    </a>
-                </div>
             </div>
         </div>
-        <div class="card-footer d-flex justify-content-between align-items-center">
+        <div class="card-footer d-flex justify-content-between align-items-center mt-5">
             <div class="tp-card-btn-footer m-1">
                 <a href="{% url main_url %}" class="btn btn-secondary">{% trans 'Back' %}</a>
             </div>
