--- a/trustpoint/templates/trustpoint/pagination.html
+++ b/trustpoint/templates/trustpoint/pagination.html
@@ -1,6 +1,6 @@
 <!-- Pagination Controls -->
 {% if is_paginated %}
-<nav class="mt-3">
+<nav>
   <ul class="pagination">
     {% if page_obj.has_previous %}
     <li class="page-item">
@@ -30,4 +30,6 @@
     {% endif %}
   </ul>
 </nav>
+{% else %}
+<div></div>
 {% endif %}
