--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -20,10 +20,12 @@
             {% if device.onboarding_config %}
                 <h2 class="d-flex justify-content-between align-items-center">
                     <span>{% trans "Issued Domain Credentials" %}</span>
-                    <a href="" class="btn btn-primary"
-                       style="width: 25rem;">
-                        {% trans "Issue new Domain Credential" %}
-                    </a>
+                    {% if issue_domain_cred_onboarding_url %}
+                        <a href="{% url issue_domain_cred_onboarding_url pk=device.pk %}" class="btn btn-primary"
+                        style="width: 25rem;">
+                            {% trans "Issue new Domain Credential" %}
+                        </a>
+                    {% endif %}
                 </h2>
                 <hr>
                 <div class="mb-5">
@@ -96,9 +98,11 @@
                                 {% trans "Issue new Application Credential" %}
                             </a>
                         {% else %}
-                            <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
-                                {% trans 'Issue New Application Credential' %}
-                            </a>
+                            {% if issue_app_cred_no_onboarding_url %}
+                                <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
+                                    {% trans 'Issue New Application Credential' %}
+                                </a>
+                            {% endif %}
                         {% endif %}
                         
                     </h2>
@@ -114,9 +118,11 @@
                 
                     <h2 class="d-flex justify-content-between align-items-center">
                         <span>{% trans "Issued Application Credentials" %}</span>
-                            <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
-                                {% trans 'Issue New Application Credential' %}
-                            </a>
+                            {% if issue_app_cred_no_onboarding_url %}
+                                <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
+                                    {% trans 'Issue New Application Credential' %}
+                                </a>
+                            {% endif %}
                     </h2>
 
             {% else %}
