--- a/trustpoint/templates/help/onboarding/est_username_password.html
+++ b/trustpoint/templates/help/onboarding/est_username_password.html
@@ -47,7 +47,7 @@
             <div class="card-footer">
                 <div class="tp-card-btn-footer">
                     <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
-                    <a href="{% url clm_url pk=device.pk %}"
+                    <a href=""
                        class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
                 </div>
             </div>
