--- a/trustpoint/templates/trustpoint/base.html
+++ b/trustpoint/templates/trustpoint/base.html
@@ -90,6 +90,7 @@
 {#                    <a href="{% url 'settings:ntp' %}" class="tp-menu-item {% if page_name == 'ntp' %}tp-menu-active{% endif %}">{% trans "NTP" %}</a>#}
                     <a href="{% url 'settings:security' %}" class="tp-menu-item {% if page_name == 'security' %}tp-menu-active{% endif %}">{% trans "Security" %}</a>
                     <a href="{% url 'settings:backups' %}" class="tp-menu-item {% if page_name == 'backup' %}tp-menu-active{% endif %}">{% trans "Backup" %}</a>
+                    <a href="{% url 'settings:pkcs11' %}" class="tp-menu-item {% if page_name == 'pkcs11' %}tp-menu-active{% endif %}">{% trans "PKCS#11" %}</a>
                 </div>
             </div>
             <div class="tp-menu-footer">
