--- a/trustpoint/templates/management/tls/generate_tls.html
+++ b/trustpoint/templates/management/tls/generate_tls.html
@@ -14,16 +14,15 @@
     <h3 class="mb-3">Subject Alternative Name (SAN) Information.</h3>
     <form
       method="POST"
-      action="{% url 'setup_wizard:generate_tls_server_credential' %}"
       class="text-start"
     >
       {% csrf_token %}
       <fieldset class="form-group tp-form-group">
-        {{ tls_form|crispy }}
+        {{ form|crispy }}
       </fieldset>
       <hr />
       <div class="tp-form-btn-group tp-form-btn-group">
-        <a href="" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
+        <a href="{% url 'management:tls-add-method_select' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
         <button class="btn btn-primary w-100 mt-1" type="submit">
           {% trans "Generate Self-Signed TLS-Server Credential and Activate" %}
         </button>
