--- a/trustpoint/templates/management/tls/file_import.html
+++ b/trustpoint/templates/management/tls/file_import.html
@@ -22,7 +22,7 @@
             <div class="card-footer d-flex">
                 <div class="tp-card-btn-footer m-1">
                     <a href="{% url 'management:tls-add-method_select' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
-                    <button type="submit" class="btn btn-primary">{% trans 'Add new TLS-Server Credential' %}</button>
+                    <button type="submit" class="btn btn-primary">{% trans 'Add new TLS Credential' %}</button>
                 </div>
             </div>
         </div>
