wip, just the general structure vor general help generation with cmp as example

--- a/trustpoint/templates/help/deprecated/generic_details/cmp_shared_secret_summary_block.html
+++ b/trustpoint/templates/help/deprecated/generic_details/cmp_shared_secret_summary_block.html
@@ -11,7 +11,7 @@
             <div>{% trans 'Shared Secret' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    {{ cmp_shared_secret }}
+                    {{ shared_secret }}
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
