--- a/trustpoint/templates/help/deprecated/no_onboarding/est_username_password.html
+++ b/trustpoint/templates/help/deprecated/no_onboarding/est_username_password.html
@@ -22,39 +22,39 @@
                 <div class="tp-card-centered-content">
 
 
-                    {% if certificate_template == 'tls-server' or certificate_template == 'tls-client' or certificate_template == 'opcua-client' or certificate_template == 'opcua-server'%}
-                        {% include 'help/generic_details/est_notifications_block.html' with expected_allow_app_certs=True expected_allow_username_registration=False expected_username_auth=True expected_domain_auth=False %}
+                    {% if certificate_profile == 'tls-server' or certificate_profile == 'tls-client' or certificate_profile == 'opcua-client' or certificate_profile == 'opcua-server'%}
+                        {% include 'help/deprecated/generic_details/est_notifications_block.html' with expected_allow_app_certs=True expected_allow_username_registration=False expected_username_auth=True expected_domain_auth=False %}
 
                         <h2>{% trans 'Summary' %}</h2>
                         <hr>
-                        {% include 'help/generic_details/est_application_credential_summary_block.html' %}
-                        {% include 'help/generic_details/est_username_password_summary_block.html' %}
+                        {% include 'help/deprecated/generic_details/est_application_credential_summary_block.html' %}
+                        {% include 'help/deprecated/generic_details/est_username_password_summary_block.html' %}
 
                         <h2 class="mt-5">{% trans 'Download or Copy the Trustpoint TLS Server Certificate' %}</h2>
                         <hr>
-                        {% include 'help/generic_details/download_tls_server_certificate_block.html' %}
+                        {% include 'help/deprecated/generic_details/download_tls_server_certificate_block.html' %}
 
                         <h2 class="mt-5">{% trans 'Create Keypair and Certificate Signing Request (CSR)' %}</h2>
                         <hr>
-                        {% include 'help/generic_details/generic_application_credential_key_gen_block.html' %}
-                        {% if certificate_template == 'tls-server' %}
-                            {% include 'help/generic_details/est_application_csr_tls_server.html' %}
-                        {% elif certificate_template == 'tls-client' %}
-                            {% include 'help/generic_details/est_application_csr_tls_client.html' %}
-                        {% elif certificate_template == 'opcua-client' %}
-                            {% include 'help/generic_details/est_application_csr_opcua_client.html' %}
-                        {% elif certificate_template == 'opcua-server' %}
-                            {% include 'help/generic_details/est_application_csr_opcua_server.html' %}
+                        {% include 'help/deprecated/generic_details/generic_application_credential_key_gen_block.html' %}
+                        {% if certificate_profile == 'tls-server' %}
+                            {% include 'help/deprecated/generic_details/est_application_csr_tls_server.html' %}
+                        {% elif certificate_profile == 'tls-client' %}
+                            {% include 'help/deprecated/generic_details/est_application_csr_tls_client.html' %}
+                        {% elif certificate_profile == 'opcua-client' %}
+                            {% include 'help/deprecated/generic_details/est_application_csr_opcua_client.html' %}
+                        {% elif certificate_profile == 'opcua-server' %}
+                            {% include 'help/deprecated/generic_details/est_application_csr_opcua_server.html' %}
                         {% endif %}
 
                         <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
                         <hr>
-                        {% include 'help/no_onboarding/details/est_application_curl_enroll.html' %}
-                        {% include 'help/generic_details/est_curl_cacert.html' %}
+                        {% include 'help/deprecated/no_onboarding/details/est_application_curl_enroll.html' %}
+                        {% include 'help/deprecated/generic_details/est_curl_cacert.html' %}
                     {% else %}
                         <div class="alert alert-warning" role="alert">
                             <strong>Warning:</strong> There is no support for the selected certificate template
-                            <code>{{ certificate_template }}</code>.
+                            <code>{{ certificate_profile }}</code>.
                         </div>
                     {% endif %}
 
