--- a/trustpoint/templates/help/no_onboarding/cmp_shared_secret.html
+++ b/trustpoint/templates/help/no_onboarding/cmp_shared_secret.html
@@ -1,7 +1,6 @@
 {% extends 'trustpoint/base.html' %}
 {% load i18n %}
 {% load static %}
-{% load crispy_forms_filters %}
 
 {% block head %}
     <script src="{% static 'js/copy_clipboard.js' %}"></script>
@@ -9,47 +8,145 @@
 
 {% block content %}
 
-    <form method="POST" autocomplete="off">
-        {% csrf_token %}
-
-        <div class="card">
-            <div class="card-header">
-                <div>
-                    <h1>{% trans 'Help - No Onboarding - CMP Shared Secret' %}</h1>
-                </div>
-            </div>
-            <div class="card-body">
-                <div class="tp-card-centered-content">
-                    {% if certificate_template == 'tls-server' or certificate_template == 'tls-client' %}
-                        <h2>{% trans 'Summary' %}</h2>
-                        <hr>
-                        {% include 'help/generic_details/cmp_application_credential_summary_block.html' %}
-                        {% include 'help/generic_details/cmp_shared_secret_summary_block.html' %}
-
-                        <h2 class="mt-5">{% trans 'Enroll Application Credential' %}</h2>
-                        <hr>
-                        {% include 'help/generic_details/generic_application_credential_key_gen_block.html' %}
-                        {% if certificate_template == 'tls-server' %}
-                            {% include 'help/no_onboarding/details/cmp_enroll_tls_server.html' %}
-                        {% elif certificate_template == 'tls-client' %}
-                            {% include 'help/no_onboarding/details/cmp_enroll_tls_client.html' %}
-                        {% endif %}
-                    {% else %}
-                        <div class="alert alert-warning" role="alert">
-                            <strong>Warning:</strong> There is no support for the selected certificate template
-                            <code>{{ certificate_template }}</code>.
-                        </div>
-                    {% endif %}
-                </div>
-
-            </div>
-            <div class="card-footer">
-                <div class="tp-card-btn-footer">
-                    <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
-                    <a href="{% url clm_url pk=device.pk %}" class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
-                </div>
+    <div class="card">
+        <div class="card-header">
+            <div>
+                <h1>{% trans 'Help - No Onboarding - CMP Shared Secret' %}</h1>
             </div>
         </div>
-    </form>
+        <div class="card-body">
+            <div class="tp-card-centered-content">
+                    <h2>{% trans 'Summary' %}</h2>
+                    <hr>
+
+                    <ul class="tp-kvp-list">
+                        <li>
+                            <div>{% trans 'Certificate Request URL' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                    https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/{{ certificate_template }}/
+                                </code>
+
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <div>{% trans 'Key Identifier (KID)' %}</div>
+                            <div>{{ device.id }}</div>
+                        </li>
+                        <li>
+                            <div>{% trans 'Required Public Key Type' %}</div>
+                            <div>{{ device.public_key_info }}</div>
+                        </li>
+                    </ul>
+
+                    <ul class="tp-kvp-list">
+                        <li>
+                            <div>{% trans 'Shared Secret' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                        {{ shared_secret }}
+                                    </code>
+
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <h2 class="mt-5">{% trans 'Enroll Application Credential' %}</h2>
+                    <hr>
+                    
+                    <ul class="tp-kvp-list">
+                    
+                        <li>
+                            <div>{% trans 'Generate a Keypair' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                        {{ key_gen_command }}
+                                    </code>
+                    
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                            </div>
+                            <hr>
+                        </li>
+                    </ul>
+
+                    <ul class="tp-kvp-list" id="cmp-tls-client-command">
+                    
+                        <li>
+                            <h2 class="mt-5">{% trans 'TLS-Client Certificate Request' %}</h2>
+                            <hr>
+                            <div>{% trans 'OpenSSL Command' %}</div>
+                            <div class="copy-container" style="position: relative;">
+                                <code class="command-text language-bash">
+                                                        {{ cmp_tls_client_command|safe }}
+                                                        <!-- openssl cmp \<br>
+                                                        -cmd cr \<br>
+                                                        -implicit_confirm \<br>
+                                                        -server https://{{ host }}/.well-known/cmp/certification/{{ device.domain }}/tls-client/ \<br>
+                                                        -tls_used \<br>
+                                                        -ref {{ device.id }} \<br>
+                                                        -secret pass:{{ cmp_shared_secret }} \<br>
+                                                        -subject "/CN={{ cn_entry }}" \<br>
+                                                        -days 10 \<br>
+                                                        -newkey key.pem \<br>
+                                                        -certout cert.pem \<br>
+                                                        -chainout chain_without_root.pem \<br>
+                                                        -extracertsout full_chain.pem -->
+                                                    </code>
+                    
+                                <button type="button" class="copy-button" data-tooltip="Copy to clipboard" aria-label="Copy to clipboard">
+                                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
+                                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
+                                    </svg>
+                                </button>
+                    
+                            </div>
+                        </li>
+                        <li>
+                            <h3 class="mt-3">{% trans 'Mutable Parameters' %}</h3>
+                            <hr>
+                            <div>{% trans 'Common Name' %}</div>
+                            <div>{{ cn_entry }}</div>
+                        </li>
+                        <li>
+                            <div>{% trans 'Validity (days)' %}</div>
+                            <div>-days 10</div>
+                        </li>
+                        <li>
+                            <hr>
+                            <div>Remarks</div>
+                            {% trans 'Note that it is possible to use the CMP initialization (IR) and certification (CR) request message
+                            types interchangeably for this use case. Thus, if you are using a different CMP client that requires you to use
+                            the initialization request message type, this will work as well.' %}<br><br>
+                            -cmd ir <br>
+                            -server https://{{ host }}/.well-known/cmp/initialization/{{ device.domain }}/tls-client/
+                        </li>
+                    </ul>
+
+            </div>
+
+        </div>
+        <div class="card-footer">
+            <div class="tp-card-btn-footer">
+                <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
+                <a href="{% url clm_url pk=device.pk %}" class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
+            </div>
+        </div>
+    </div>
 
 {% endblock content %}
+
+
